# FlowDock

./: .env  .env.example  .gitignore  API_ENDPOINTS.md  CLEANUP_SUMMARY.md  DOCKER_SETUP.md  FOLDER_OPERATIONS_COMPLETE.md  FOLDER_OPERATIONS_IMPLEMENTATION.md  FRONTEND_ARCHITECTURE.md  LOGIN_TIMEOUT_FIX.md  OBSERVABILITY_SETUP.md  PGADMIN_SETUP.md  PROMETHEUS_QUERIES.md  QUICK_FIX.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  test_activity_logging.py  test_api_key_authentication.py  test_folder_operations_comprehensive.py  test_shared_folder_download.py
FlowDock-main/: .dockerignore  .env.example  GRAFANA_SETUP.md  PROMETHEUS_QUERIES.md  SERVICE_ACCESS_GUIDE.md  docker-compose.yml  prometheus.yml
FlowDock-main/UML/: Activity Logging.puml  File Delete.puml  File Sharing.puml  File Upload.puml  Folder Management.puml  OTP Generation & Verification.puml  Rate-Limit Pipeline.puml  Virus Scanning.puml
FlowDock-main/frontend/: Dockerfile  package-lock.json
UML/: Authentication.puml  File Download.puml  File Upload Flow.puml  Multi-Device Session Management.puml  Password Recovery.puml  Refresh Token Flow.puml  TOTP.puml
backend/auth_service/: CLASSES_REFERENCE.md  COMPLETION_CHECKLIST.md  Dockerfile  FILES_INDEX.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README_CLEAN_ARCHITECTURE.md  REFACTORING_SUMMARY.md  START_HERE.md  TEST_SETUP_COMPLETE.md  diagnose_jwt.py  docker-compose.yml  pytest.ini  requirements.txt  run.sh  test_jwt_auth.py
frontend/: .dockerignore  Dockerfile  package.json  tailwind.config.js
(+200 files in other folders)
