[project]
name = "flowdock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi==23.1.0",
    "authlib>=1.6.5",
    "cryptography==41.0.7",
    "email-validator==2.1.0",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "itsdangerous==2.1.2",
    "motor==3.3.2",
    "passlib[bcrypt]==1.7.4",
    "pika==1.3.2",
    "pillow==11.0.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings==2.1.0",
    "pymongo==4.6.0",
    "pyotp==2.9.0",
    "pytest==7.4.3",
    "python-jose[cryptography]==3.3.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "qrcode==7.4.2",
    "redis==5.0.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.24.0",
]
